@@ -84,7 +84,7 @@ public class MockTracer {
             }))
             .build();
 
-        tracer.start();
+        tracer.start(false);
         return tracer;
     }
 
