@@ -48,6 +48,8 @@ endif::[]
 * Expanding k8s pod ID discovery to some formerly non-supported environments
 * When `recording` is set to `false`, the agent will not send captured errors anymore.
 * Fixes NPE in Dubbo instrumentation that occurs when the application is acting both as a provider and as a consumer - {pull}1260[#1260]
+* Adding a delay by default what attaching the agent to Tomcat using the premain route to work around the JUL
+  deadlock issue - {pull}1262[#1262]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
